# radararchive

./: .env.example  .gitignore  Makefile  README.md  bootstrap_radararchive.sh  docker-compose.yml  package.json  pyproject.toml  requirements-optional-decoders.txt
backend/app/: config.py  database.py  (+1 more)
docs/: API_SPEC.md  ARCHITECTURE.md  CHATGPT_REVIEW.md  CURSOR_RULES.md  DATA_SOURCES.md  GRIB2_DECODE.md  MRMS_OPERATOR_SIGNOFF_TEMPLATE.md  NEXT_PHASE_PROMPT.md  NEXT_STEPS.md  PHASE_LOG.md  PHASE_WORKFLOW_RULES.md  PRODUCT_SPEC.md  PROJECT_STATE.md  RUNBOOK_REAL_MRMS_VALIDATION.md  VERIFIED_MRMS_CRITERIA.md
frontend/: index.html  package-lock.json  package.json
scripts/: auto_phase.sh  batch_validate_mrms.py  benchmark_real_mrms.py  benchmark_render_queue.py  build_production_tiles.py  build_tile_cache.py  catalog_status.py  check_phase_ready.sh  clean_runtime_artifacts.sh  clip_import.py  clip_remediation.py  collect_once.py  copy_next_phase.sh  db_reset.py  decode_grib2.py  decode_retry.py  decoder_setup.py  dev_backend.sh  dev_frontend.sh  diff_mrms_proof_bundles.py  discover_mrms.py  download_mrms.py  enqueue_render_job.py  export_mrms_proof_bundle.py  finish_phase.sh  frame_quality.py  full_auto_phase.sh  generate_mrms_proof_report.py  generate_operator_handoff.py  inspect_grib2.py  local_replay_ready.py  mrms_bulk_local_ingest.py  mrms_ingest_window.py  mrms_local_render_pipeline.py  mrms_proof_history.py  mrms_proof_regression.py  mrms_render_candidate_dry_run_plan.py  mrms_render_candidate_gated_ack_history.py  mrms_render_candidate_gated_comparison_ack.py  (+81 more)
(+394 files in other folders)
