[project]
name = "radararchive"
version = "0.1.0"
description = "Historical weather replay app focused on radar history"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "pytest",
    "httpx",
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
